Compiler/y.output
State 23 conflicts: 1 shift/reduce
State 48 conflicts: 1 reduce/reduce
State 51 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 1 reduce/reduce
State 159 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 19 shift/reduce


Grammar

    0 $accept: Code $end

    1 Code: headerfileInclude Program

    2 headerfileInclude: INCLUDE HEADERFILE headerfileInclude
    3                  | ε

    4 Program: func_list

    5 func_list: func_list func
    6          | ε

    7 $@1: ε

    8 func: func_prefix OF $@1 stmt_list CF

    9 $@2: ε

   10 func_prefix: func_data_type ID $@2 OC param_list CC

   11 func_data_type: data_type
   12               | VOID

   13 $@3: ε

   14 param_list: param $@3 COMMA param_list
   15           | param
   16           | ε

   17 param: data_type ID

   18 stmt_list: stmt stmt_list
   19          | ε

   20 stmt: declaration
   21     | assign SCOL
   22     | expr SCOL
   23     | return_stmt SCOL
   24     | if_stmt
   25     | while_loop_stmt
   26     | for_loop_stmt
   27     | BREAK SCOL
   28     | CONTINUE SCOL
   29     | switch_stmt
   30     | INPUT OC ID CC SCOL
   31     | INPUT OC ID OS expr CS CC SCOL
   32     | OUTPUT OC expr CC SCOL
   33     | OUTPUT OC STR CC SCOL
   34     | TYPEOF ID SCOL

   35 declaration: data_type ID SCOL
   36            | data_type ID ASSIGN FLEN OC STR CC SCOL
   37            | FLEN OC ID CC ASSIGN ID SCOL
   38            | data_type ID ASSIGN FLEN OC ID CC SCOL
   39            | STRING ID SCOL
   40            | STRING ID ASSIGN STR SCOL
   41            | STRING ID ASSIGN expr SCOL
   42            | data_type ID ASSIGN expr SCOL
   43            | data_type ID assign ID SCOL
   44            | data_type ID OS INT_NUM CS SCOL
   45            | data_type ID OS INT_NUM CS ASSIGN
   46            | data_type ID OS CHARACTER CS ASSIGN
   47            | MAC RESET SCOL
   48            | OF arr_values CF SCOL

   49 $@4: ε

   50 arr_values: const $@4 COMMA arr_values
   51           | const

   52 $@5: ε

   53 arr_values: ID $@5 COMMA arr_values
   54           | ID

   55 return_stmt: RETURN expr
   56            | RETURN STR
   57            | ε

   58 data_type: INT
   59          | FLOAT
   60          | STRING
   61          | CHAR
   62          | BOOL

   63 expr: expr ADD expr
   64     | expr SUBTRACT expr
   65     | expr MULTIPLY expr
   66     | expr DIVIDE expr
   67     | expr MACOP expr
   68     | expr LE expr
   69     | expr LE FLEN OC ID CC
   70     | expr GE expr
   71     | expr GE FLEN OC ID CC
   72     | expr LT expr
   73     | expr LT FLEN OC ID CC
   74     | expr GT expr
   75     | expr GT FLEN OC ID CC
   76     | expr EQ expr
   77     | expr EQ FLEN OC ID CC
   78     | expr NE FLEN OC ID CC
   79     | expr NE expr
   80     | expr AND expr
   81     | expr OR expr
   82     | expr MODULO expr
   83     | expr BITAND expr
   84     | expr BITOR expr
   85     | expr XOR expr
   86     | expr LEFTSHIFT expr
   87     | expr RIGHTSHIFT expr
   88     | unary_expr
   89     | primary_expr
   90     | postfix_expr
   91     | expr ADD ADD

   92 postfix_expr: func_call
   93             | ID OS expr CS

   94 unary_expr: unary_op primary_expr

   95 primary_expr: ID
   96             | const
   97             | OC expr CC

   98 unary_op: ADD
   99         | SUBTRACT
  100         | NOT
  101         | NEGATION

  102 const: INT_NUM
  103      | FLOAT_NUM
  104      | CHARACTER

  105 assign: ID ASSIGN expr
  106       | ID OS expr CS ASSIGN expr
  107       | expr
  108       | declaration

  109 $@6: ε

  110 $@7: ε

  111 $@8: ε

  112 $@9: ε

  113 if_stmt: IF $@6 OC expr CC $@7 OF $@8 stmt_list CF $@9 elif_stmt else_stmt

  114 $@10: ε

  115 $@11: ε

  116 $@12: ε

  117 $@13: ε

  118 elif_stmt: ELIF $@10 OC expr CC $@11 OF $@12 stmt_list CF $@13 elif_stmt
  119          | ε

  120 $@14: ε

  121 else_stmt: ELSE OF $@14 stmt_list CF
  122          | ε

  123 $@15: ε

  124 $@16: ε

  125 $@17: ε

  126 switch_stmt: SWITCH $@15 OC ID $@16 CC OF case_stmt_list $@17 default_stmt CF

  127 case_stmt_list: case_stmt case_stmt_list
  128               | ε

  129 $@18: ε

  130 $@19: ε

  131 case_stmt: CASE $@18 OC const $@19 CC COLON stmt_list

  132 default_stmt: DEFAULT COLON stmt_list
  133             | ε

  134 $@20: ε

  135 $@21: ε

  136 $@22: ε

  137 while_loop_stmt: WHILE $@20 OC expr CC $@21 OF $@22 stmt_list CF

  138 $@23: ε

  139 $@24: ε

  140 $@25: ε

  141 $@26: ε

  142 for_loop_stmt: FOR OC assign SCOL $@23 expr SCOL $@24 assign CC $@25 OF $@26 stmt_list CF

  143 $@27: ε

  144 func_call: ID $@27 OC arg_list CC

  145 arg_list: arg COMMA arg_list
  146         | arg
  147         | ε

  148 arg: expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INCLUDE <node> (258) 2
    HEADERFILE <node> (259) 2
    INT <node> (260) 58
    CHAR <node> (261) 61
    FLOAT <node> (262) 59
    STRING <node> (263) 39 40 41 60
    BOOL <node> (264) 62
    VOID <node> (265) 12
    RETURN <node> (266) 55 56
    INT_NUM <node> (267) 44 45 102
    FLOAT_NUM <node> (268) 103
    ID <node> (269) 10 17 30 31 34 35 36 37 38 39 40 41 42 43 44 45 46 53 54 69 71 73 75 77 78 93 95 105 106 126 144
    LEFTSHIFT <node> (270) 86
    RIGHTSHIFT <node> (271) 87
    LE <node> (272) 68 69
    GE <node> (273) 70 71
    EQ <node> (274) 76 77
    NE <node> (275) 78 79
    GT <node> (276) 74 75
    LT <node> (277) 72 73
    AND <node> (278) 80
    OR <node> (279) 81
    NOT <node> (280) 100
    ADD <node> (281) 63 91 98
    SUBTRACT <node> (282) 64 99
    DIVIDE <node> (283) 66
    MULTIPLY <node> (284) 65
    MODULO <node> (285) 82
    BITAND <node> (286) 83
    BITOR <node> (287) 84
    NEGATION <node> (288) 101
    XOR <node> (289) 85
    STR <node> (290) 33 36 40 56
    CHARACTER <node> (291) 46 104
    CC <node> (292) 10 30 31 32 33 36 37 38 69 71 73 75 77 78 97 113 118 126 131 137 142 144
    OC <node> (293) 10 30 31 32 33 36 37 38 69 71 73 75 77 78 97 113 118 126 131 137 142 144
    CS <node> (294) 31 44 45 46 93 106
    OS <node> (295) 31 44 45 46 93 106
    CF <node> (296) 8 48 113 118 121 126 137 142
    OF <node> (297) 8 48 113 118 121 126 137 142
    COMMA <node> (298) 14 50 53 145
    COLON <node> (299) 131 132
    SCOL <node> (300) 21 22 23 27 28 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 47 48 142
    OUTPUT <node> (301) 32 33
    INPUT <node> (302) 30 31
    SWITCH <node> (303) 126
    CASE <node> (304) 131
    BREAK <node> (305) 27
    DEFAULT <node> (306) 132
    IF <node> (307) 113
    ELIF <node> (308) 118
    ELSE <node> (309) 121
    WHILE <node> (310) 137
    FOR <node> (311) 142
    CONTINUE <node> (312) 28
    TYPEOF <node> (313) 34
    FLEN <node> (314) 36 37 38 69 71 73 75 77 78
    MAC <node> (315) 47
    RESET <node> (316) 47
    MACOP <node> (317) 67
    ASSIGN (318) 36 37 38 40 41 42 45 46 105 106


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Code (65)
        on left: 1
        on right: 0
    headerfileInclude <node> (66)
        on left: 2 3
        on right: 1 2
    Program <node> (67)
        on left: 4
        on right: 1
    func_list <node> (68)
        on left: 5 6
        on right: 4 5
    func <node> (69)
        on left: 8
        on right: 5
    $@1 (70)
        on left: 7
        on right: 8
    func_prefix <node> (71)
        on left: 10
        on right: 8
    $@2 (72)
        on left: 9
        on right: 10
    func_data_type <node> (73)
        on left: 11 12
        on right: 10
    param_list <node> (74)
        on left: 14 15 16
        on right: 10 14
    $@3 (75)
        on left: 13
        on right: 14
    param <node> (76)
        on left: 17
        on right: 14 15
    stmt_list <node> (77)
        on left: 18 19
        on right: 8 18 113 118 121 131 132 137 142
    stmt <node> (78)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 18
    declaration <node> (79)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 20 108
    arr_values (80)
        on left: 50 51 53 54
        on right: 48 50 53
    $@4 (81)
        on left: 49
        on right: 50
    $@5 (82)
        on left: 52
        on right: 53
    return_stmt <node> (83)
        on left: 55 56 57
        on right: 23
    data_type <node> (84)
        on left: 58 59 60 61 62
        on right: 11 17 35 36 38 42 43 44 45 46
    expr <node> (85)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 22 31 32 41 42 55 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 91 93 97 105 106 107 113 118 137 142 148
    postfix_expr <node> (86)
        on left: 92 93
        on right: 90
    unary_expr <node> (87)
        on left: 94
        on right: 88
    primary_expr <node> (88)
        on left: 95 96 97
        on right: 89 94
    unary_op <node> (89)
        on left: 98 99 100 101
        on right: 94
    const <node> (90)
        on left: 102 103 104
        on right: 50 51 96 131
    assign <node> (91)
        on left: 105 106 107 108
        on right: 21 43 142
    if_stmt <node> (92)
        on left: 113
        on right: 24
    $@6 (93)
        on left: 109
        on right: 113
    $@7 (94)
        on left: 110
        on right: 113
    $@8 (95)
        on left: 111
        on right: 113
    $@9 (96)
        on left: 112
        on right: 113
    elif_stmt <node> (97)
        on left: 118 119
        on right: 113 118
    $@10 (98)
        on left: 114
        on right: 118
    $@11 (99)
        on left: 115
        on right: 118
    $@12 (100)
        on left: 116
        on right: 118
    $@13 (101)
        on left: 117
        on right: 118
    else_stmt <node> (102)
        on left: 121 122
        on right: 113
    $@14 (103)
        on left: 120
        on right: 121
    switch_stmt <node> (104)
        on left: 126
        on right: 29
    $@15 (105)
        on left: 123
        on right: 126
    $@16 (106)
        on left: 124
        on right: 126
    $@17 (107)
        on left: 125
        on right: 126
    case_stmt_list <node> (108)
        on left: 127 128
        on right: 126 127
    case_stmt <node> (109)
        on left: 131
        on right: 127
    $@18 (110)
        on left: 129
        on right: 131
    $@19 (111)
        on left: 130
        on right: 131
    default_stmt (112)
        on left: 132 133
        on right: 126
    while_loop_stmt <node> (113)
        on left: 137
        on right: 25
    $@20 (114)
        on left: 134
        on right: 137
    $@21 (115)
        on left: 135
        on right: 137
    $@22 (116)
        on left: 136
        on right: 137
    for_loop_stmt <node> (117)
        on left: 142
        on right: 26
    $@23 (118)
        on left: 138
        on right: 142
    $@24 (119)
        on left: 139
        on right: 142
    $@25 (120)
        on left: 140
        on right: 142
    $@26 (121)
        on left: 141
        on right: 142
    func_call <node> (122)
        on left: 144
        on right: 92
    $@27 (123)
        on left: 143
        on right: 144
    arg_list <node> (124)
        on left: 145 146 147
        on right: 144 145
    arg <node> (125)
        on left: 148
        on right: 145 146


State 0

    0 $accept: • Code $end

    INCLUDE  shift, and go to state 1

    $default  reduce using rule 3 (headerfileInclude)

    Code               go to state 2
    headerfileInclude  go to state 3


State 1

    2 headerfileInclude: INCLUDE • HEADERFILE headerfileInclude

    HEADERFILE  shift, and go to state 4


State 2

    0 $accept: Code • $end

    $end  shift, and go to state 5


State 3

    1 Code: headerfileInclude • Program

    $default  reduce using rule 6 (func_list)

    Program    go to state 6
    func_list  go to state 7


State 4

    2 headerfileInclude: INCLUDE HEADERFILE • headerfileInclude

    INCLUDE  shift, and go to state 1

    $default  reduce using rule 3 (headerfileInclude)

    headerfileInclude  go to state 8


State 5

    0 $accept: Code $end •

    $default  accept


State 6

    1 Code: headerfileInclude Program •

    $default  reduce using rule 1 (Code)


State 7

    4 Program: func_list •
    5 func_list: func_list • func

    INT     shift, and go to state 9
    CHAR    shift, and go to state 10
    FLOAT   shift, and go to state 11
    STRING  shift, and go to state 12
    BOOL    shift, and go to state 13
    VOID    shift, and go to state 14

    $default  reduce using rule 4 (Program)

    func            go to state 15
    func_prefix     go to state 16
    func_data_type  go to state 17
    data_type       go to state 18


State 8

    2 headerfileInclude: INCLUDE HEADERFILE headerfileInclude •

    $default  reduce using rule 2 (headerfileInclude)


State 9

   58 data_type: INT •

    $default  reduce using rule 58 (data_type)


State 10

   61 data_type: CHAR •

    $default  reduce using rule 61 (data_type)


State 11

   59 data_type: FLOAT •

    $default  reduce using rule 59 (data_type)


State 12

   60 data_type: STRING •

    $default  reduce using rule 60 (data_type)


State 13

   62 data_type: BOOL •

    $default  reduce using rule 62 (data_type)


State 14

   12 func_data_type: VOID •

    $default  reduce using rule 12 (func_data_type)


State 15

    5 func_list: func_list func •

    $default  reduce using rule 5 (func_list)


State 16

    8 func: func_prefix • OF $@1 stmt_list CF

    OF  shift, and go to state 19


State 17

   10 func_prefix: func_data_type • ID $@2 OC param_list CC

    ID  shift, and go to state 20


State 18

   11 func_data_type: data_type •

    $default  reduce using rule 11 (func_data_type)


State 19

    8 func: func_prefix OF • $@1 stmt_list CF

    $default  reduce using rule 7 ($@1)

    $@1  go to state 21


State 20

   10 func_prefix: func_data_type ID • $@2 OC param_list CC

    $default  reduce using rule 9 ($@2)

    $@2  go to state 22


State 21

    8 func: func_prefix OF $@1 • stmt_list CF

    INT        shift, and go to state 9
    CHAR       shift, and go to state 10
    FLOAT      shift, and go to state 11
    STRING     shift, and go to state 23
    BOOL       shift, and go to state 13
    RETURN     shift, and go to state 24
    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 27
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33
    OF         shift, and go to state 34
    OUTPUT     shift, and go to state 35
    INPUT      shift, and go to state 36
    SWITCH     shift, and go to state 37
    BREAK      shift, and go to state 38
    IF         shift, and go to state 39
    WHILE      shift, and go to state 40
    FOR        shift, and go to state 41
    CONTINUE   shift, and go to state 42
    TYPEOF     shift, and go to state 43
    FLEN       shift, and go to state 44
    MAC        shift, and go to state 45

    SCOL      reduce using rule 57 (return_stmt)
    $default  reduce using rule 19 (stmt_list)

    stmt_list        go to state 46
    stmt             go to state 47
    declaration      go to state 48
    return_stmt      go to state 49
    data_type        go to state 50
    expr             go to state 51
    postfix_expr     go to state 52
    unary_expr       go to state 53
    primary_expr     go to state 54
    unary_op         go to state 55
    const            go to state 56
    assign           go to state 57
    if_stmt          go to state 58
    switch_stmt      go to state 59
    while_loop_stmt  go to state 60
    for_loop_stmt    go to state 61
    func_call        go to state 62


State 22

   10 func_prefix: func_data_type ID $@2 • OC param_list CC

    OC  shift, and go to state 63


State 23

   39 declaration: STRING • ID SCOL
   40            | STRING • ID ASSIGN STR SCOL
   41            | STRING • ID ASSIGN expr SCOL
   60 data_type: STRING •

    ID  shift, and go to state 64

    ID  [reduce using rule 60 (data_type)]


State 24

   55 return_stmt: RETURN • expr
   56            | RETURN • STR

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 65
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    STR        shift, and go to state 66
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33

    expr          go to state 67
    postfix_expr  go to state 52
    unary_expr    go to state 53
    primary_expr  go to state 54
    unary_op      go to state 55
    const         go to state 56
    func_call     go to state 62


State 25

  102 const: INT_NUM •

    $default  reduce using rule 102 (const)


State 26

  103 const: FLOAT_NUM •

    $default  reduce using rule 103 (const)


State 27

   93 postfix_expr: ID • OS expr CS
   95 primary_expr: ID •
  105 assign: ID • ASSIGN expr
  106       | ID • OS expr CS ASSIGN expr
  144 func_call: ID • $@27 OC arg_list CC

    OS      shift, and go to state 68
    ASSIGN  shift, and go to state 69

    OC        reduce using rule 143 ($@27)
    $default  reduce using rule 95 (primary_expr)

    $@27  go to state 70


State 28

  100 unary_op: NOT •

    $default  reduce using rule 100 (unary_op)


State 29

   98 unary_op: ADD •

    $default  reduce using rule 98 (unary_op)


State 30

   99 unary_op: SUBTRACT •

    $default  reduce using rule 99 (unary_op)


State 31

  101 unary_op: NEGATION •

    $default  reduce using rule 101 (unary_op)


State 32

  104 const: CHARACTER •

    $default  reduce using rule 104 (const)


State 33

   97 primary_expr: OC • expr CC

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 65
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33

    expr          go to state 71
    postfix_expr  go to state 52
    unary_expr    go to state 53
    primary_expr  go to state 54
    unary_op      go to state 55
    const         go to state 56
    func_call     go to state 62


State 34

   48 declaration: OF • arr_values CF SCOL

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 72
    CHARACTER  shift, and go to state 32

    arr_values  go to state 73
    const       go to state 74


State 35

   32 stmt: OUTPUT • OC expr CC SCOL
   33     | OUTPUT • OC STR CC SCOL

    OC  shift, and go to state 75


State 36

   30 stmt: INPUT • OC ID CC SCOL
   31     | INPUT • OC ID OS expr CS CC SCOL

    OC  shift, and go to state 76


State 37

  126 switch_stmt: SWITCH • $@15 OC ID $@16 CC OF case_stmt_list $@17 default_stmt CF

    $default  reduce using rule 123 ($@15)

    $@15  go to state 77


State 38

   27 stmt: BREAK • SCOL

    SCOL  shift, and go to state 78


State 39

  113 if_stmt: IF • $@6 OC expr CC $@7 OF $@8 stmt_list CF $@9 elif_stmt else_stmt

    $default  reduce using rule 109 ($@6)

    $@6  go to state 79


State 40

  137 while_loop_stmt: WHILE • $@20 OC expr CC $@21 OF $@22 stmt_list CF

    $default  reduce using rule 134 ($@20)

    $@20  go to state 80


State 41

  142 for_loop_stmt: FOR • OC assign SCOL $@23 expr SCOL $@24 assign CC $@25 OF $@26 stmt_list CF

    OC  shift, and go to state 81


State 42

   28 stmt: CONTINUE • SCOL

    SCOL  shift, and go to state 82


State 43

   34 stmt: TYPEOF • ID SCOL

    ID  shift, and go to state 83


State 44

   37 declaration: FLEN • OC ID CC ASSIGN ID SCOL

    OC  shift, and go to state 84


State 45

   47 declaration: MAC • RESET SCOL

    RESET  shift, and go to state 85


State 46

    8 func: func_prefix OF $@1 stmt_list • CF

    CF  shift, and go to state 86


State 47

   18 stmt_list: stmt • stmt_list

    INT        shift, and go to state 9
    CHAR       shift, and go to state 10
    FLOAT      shift, and go to state 11
    STRING     shift, and go to state 23
    BOOL       shift, and go to state 13
    RETURN     shift, and go to state 24
    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 27
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33
    OF         shift, and go to state 34
    OUTPUT     shift, and go to state 35
    INPUT      shift, and go to state 36
    SWITCH     shift, and go to state 37
    BREAK      shift, and go to state 38
    IF         shift, and go to state 39
    WHILE      shift, and go to state 40
    FOR        shift, and go to state 41
    CONTINUE   shift, and go to state 42
    TYPEOF     shift, and go to state 43
    FLEN       shift, and go to state 44
    MAC        shift, and go to state 45

    SCOL      reduce using rule 57 (return_stmt)
    $default  reduce using rule 19 (stmt_list)

    stmt_list        go to state 87
    stmt             go to state 47
    declaration      go to state 48
    return_stmt      go to state 49
    data_type        go to state 50
    expr             go to state 51
    postfix_expr     go to state 52
    unary_expr       go to state 53
    primary_expr     go to state 54
    unary_op         go to state 55
    const            go to state 56
    assign           go to state 57
    if_stmt          go to state 58
    switch_stmt      go to state 59
    while_loop_stmt  go to state 60
    for_loop_stmt    go to state 61
    func_call        go to state 62


State 48

   20 stmt: declaration •
  108 assign: declaration •

    SCOL      reduce using rule 20 (stmt)
    SCOL      [reduce using rule 108 (assign)]
    $default  reduce using rule 20 (stmt)


State 49

   23 stmt: return_stmt • SCOL

    SCOL  shift, and go to state 88


State 50

   35 declaration: data_type • ID SCOL
   36            | data_type • ID ASSIGN FLEN OC STR CC SCOL
   38            | data_type • ID ASSIGN FLEN OC ID CC SCOL
   42            | data_type • ID ASSIGN expr SCOL
   43            | data_type • ID assign ID SCOL
   44            | data_type • ID OS INT_NUM CS SCOL
   45            | data_type • ID OS INT_NUM CS ASSIGN
   46            | data_type • ID OS CHARACTER CS ASSIGN

    ID  shift, and go to state 89


State 51

   22 stmt: expr • SCOL
   63 expr: expr • ADD expr
   64     | expr • SUBTRACT expr
   65     | expr • MULTIPLY expr
   66     | expr • DIVIDE expr
   67     | expr • MACOP expr
   68     | expr • LE expr
   69     | expr • LE FLEN OC ID CC
   70     | expr • GE expr
   71     | expr • GE FLEN OC ID CC
   72     | expr • LT expr
   73     | expr • LT FLEN OC ID CC
   74     | expr • GT expr
   75     | expr • GT FLEN OC ID CC
   76     | expr • EQ expr
   77     | expr • EQ FLEN OC ID CC
   78     | expr • NE FLEN OC ID CC
   79     | expr • NE expr
   80     | expr • AND expr
   81     | expr • OR expr
   82     | expr • MODULO expr
   83     | expr • BITAND expr
   84     | expr • BITOR expr
   85     | expr • XOR expr
   86     | expr • LEFTSHIFT expr
   87     | expr • RIGHTSHIFT expr
   91     | expr • ADD ADD
  107 assign: expr •

    LEFTSHIFT   shift, and go to state 90
    RIGHTSHIFT  shift, and go to state 91
    LE          shift, and go to state 92
    GE          shift, and go to state 93
    EQ          shift, and go to state 94
    NE          shift, and go to state 95
    GT          shift, and go to state 96
    LT          shift, and go to state 97
    AND         shift, and go to state 98
    OR          shift, and go to state 99
    ADD         shift, and go to state 100
    SUBTRACT    shift, and go to state 101
    DIVIDE      shift, and go to state 102
    MULTIPLY    shift, and go to state 103
    MODULO      shift, and go to state 104
    BITAND      shift, and go to state 105
    BITOR       shift, and go to state 106
    XOR         shift, and go to state 107
    SCOL        shift, and go to state 108
    MACOP       shift, and go to state 109

    SCOL  [reduce using rule 107 (assign)]


State 52

   90 expr: postfix_expr •

    $default  reduce using rule 90 (expr)


State 53

   88 expr: unary_expr •

    $default  reduce using rule 88 (expr)


State 54

   89 expr: primary_expr •

    $default  reduce using rule 89 (expr)


State 55

   94 unary_expr: unary_op • primary_expr

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 110
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33

    primary_expr  go to state 111
    const         go to state 56


State 56

   96 primary_expr: const •

    $default  reduce using rule 96 (primary_expr)


State 57

   21 stmt: assign • SCOL

    SCOL  shift, and go to state 112


State 58

   24 stmt: if_stmt •

    $default  reduce using rule 24 (stmt)


State 59

   29 stmt: switch_stmt •

    $default  reduce using rule 29 (stmt)


State 60

   25 stmt: while_loop_stmt •

    $default  reduce using rule 25 (stmt)


State 61

   26 stmt: for_loop_stmt •

    $default  reduce using rule 26 (stmt)


State 62

   92 postfix_expr: func_call •

    $default  reduce using rule 92 (postfix_expr)


State 63

   10 func_prefix: func_data_type ID $@2 OC • param_list CC

    INT     shift, and go to state 9
    CHAR    shift, and go to state 10
    FLOAT   shift, and go to state 11
    STRING  shift, and go to state 12
    BOOL    shift, and go to state 13

    $default  reduce using rule 16 (param_list)

    param_list  go to state 113
    param       go to state 114
    data_type   go to state 115


State 64

   39 declaration: STRING ID • SCOL
   40            | STRING ID • ASSIGN STR SCOL
   41            | STRING ID • ASSIGN expr SCOL

    SCOL    shift, and go to state 116
    ASSIGN  shift, and go to state 117


State 65

   93 postfix_expr: ID • OS expr CS
   95 primary_expr: ID •
  144 func_call: ID • $@27 OC arg_list CC

    OS  shift, and go to state 118

    OC        reduce using rule 143 ($@27)
    $default  reduce using rule 95 (primary_expr)

    $@27  go to state 70


State 66

   56 return_stmt: RETURN STR •

    $default  reduce using rule 56 (return_stmt)


State 67

   55 return_stmt: RETURN expr •
   63 expr: expr • ADD expr
   64     | expr • SUBTRACT expr
   65     | expr • MULTIPLY expr
   66     | expr • DIVIDE expr
   67     | expr • MACOP expr
   68     | expr • LE expr
   69     | expr • LE FLEN OC ID CC
   70     | expr • GE expr
   71     | expr • GE FLEN OC ID CC
   72     | expr • LT expr
   73     | expr • LT FLEN OC ID CC
   74     | expr • GT expr
   75     | expr • GT FLEN OC ID CC
   76     | expr • EQ expr
   77     | expr • EQ FLEN OC ID CC
   78     | expr • NE FLEN OC ID CC
   79     | expr • NE expr
   80     | expr • AND expr
   81     | expr • OR expr
   82     | expr • MODULO expr
   83     | expr • BITAND expr
   84     | expr • BITOR expr
   85     | expr • XOR expr
   86     | expr • LEFTSHIFT expr
   87     | expr • RIGHTSHIFT expr
   91     | expr • ADD ADD

    LEFTSHIFT   shift, and go to state 90
    RIGHTSHIFT  shift, and go to state 91
    LE          shift, and go to state 92
    GE          shift, and go to state 93
    EQ          shift, and go to state 94
    NE          shift, and go to state 95
    GT          shift, and go to state 96
    LT          shift, and go to state 97
    AND         shift, and go to state 98
    OR          shift, and go to state 99
    ADD         shift, and go to state 100
    SUBTRACT    shift, and go to state 101
    DIVIDE      shift, and go to state 102
    MULTIPLY    shift, and go to state 103
    MODULO      shift, and go to state 104
    BITAND      shift, and go to state 105
    BITOR       shift, and go to state 106
    XOR         shift, and go to state 107
    MACOP       shift, and go to state 109

    $default  reduce using rule 55 (return_stmt)


State 68

   93 postfix_expr: ID OS • expr CS
  106 assign: ID OS • expr CS ASSIGN expr

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 65
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33

    expr          go to state 119
    postfix_expr  go to state 52
    unary_expr    go to state 53
    primary_expr  go to state 54
    unary_op      go to state 55
    const         go to state 56
    func_call     go to state 62


State 69

  105 assign: ID ASSIGN • expr

    INT_NUM    shift, and go to state 25
    FLOAT_NUM  shift, and go to state 26
    ID         shift, and go to state 65
    NOT        shift, and go to state 28
    ADD        shift, and go to state 29
    SUBTRACT   shift, and go to state 30
    NEGATION   shift, and go to state 31
    CHARACTER  shift, and go to state 32
    OC         shift, and go to state 33

    expr          go to state 120
    postfix_expr  go to state 52
    unary_expr    go to state 53
    primary_expr  go to state 54
    unary_op      go to state 55
    const         go to state 56
    func_call     go to state 62


State 70

  144 func_call: ID $@27 • OC arg_list CC

    OC  shift, and go to state 121


State 71

   63 expr: expr • ADD expr
   64     | expr • SUBTRACT expr
   65     | expr • MULTIPLY expr
   66     | expr • DIVIDE expr
   67     | expr • MACOP expr
   68     | expr • LE expr
   69     | expr • LE FLEN OC ID CC
   70     | expr • GE expr
   71     | expr • GE FLEN OC ID CC
   72     | expr • LT expr
   73     | expr • LT FLEN OC ID CC
   74     | expr • GT expr
   75     | expr • GT FLEN OC ID CC
   76     | expr • EQ expr
   77     | expr • EQ FLEN OC ID CC
   78     | expr • NE FLEN OC ID CC
   79     | expr • NE expr
   80     | expr • AND expr
   81     | expr • OR expr
   82     | expr • MODULO expr
   83     | expr • BITAND expr
   84     | expr • BITOR expr
   85     | expr • XOR expr
   86     | expr • LEFTSHIFT expr
   87     | expr • RIGHTSHIFT expr
   91     | expr • ADD ADD
   97 primary_expr: OC expr • CC

    LEFTSHIFT   shift, and go to state 90
    RIGHTSHIFT  shift, and go to state 91
    LE          shift, and go to state 92
    GE          shift, and go to state 93
    EQ          shift, and go to state 94
    NE          shift, and go to state 95
    GT          shift, and go to state 96
    LT          shift, and go to state 97
    AND         shift, and go to state 98
    OR          shift, and go to state 99
    ADD         shift, and go to state 100
    SUBTRACT    shift, and go to state 101
    DIVIDE      shift, and go to state 102
    MULTIPLY    shift, and go to state 103
    MODULO      shift, and go to state 104
    BITAND      shift, and go to state 105
    BITOR       shift, and go to state 106
    XOR         shift, and go to state 107
    CC          shift, and go to state 122
    MACOP       shift, and go to state 109


State 72

   53 arr_values: ID • $@5 COMMA arr_values
   54           | ID •

    CF        reduce using rule 54 (arr_values)
    $default  reduce using rule 52 ($@5)

    $@5  go to state 123


State 73

   48 declaration: OF arr_values • CF SCOL

    CF  shift, and go to state 124


State 74

   50 arr_values: const • $@4 COMMA arr_values
   51           | const •

    CF        reduce using rule 51 (arr_values)
    $default  reduce using rule 49 ($@4)

    $@4  go to state 125


State 75

   32 stmt: OUTPUT OC • expr CC SCOL
   33     | OUTPUT OC • STR CC SCOL
